# Phd

04_Notes/Phd-KnowledgeBase/.obsidian/: app.json  appearance.json  bookmarks.json  community-plugins.json  graph.json  hotkeys.json  types.json  workspace.json
04_Notes/Phd-KnowledgeBase/.obsidian/snippets/: snippet.css
04_Notes/Phd-KnowledgeBase/Notes/00.Archive/: 2023-11-18.md  Test note.md
04_Notes/Phd-KnowledgeBase/Notes/01.Project Overview/: Accounts.md  _Home.md
04_Notes/Phd-KnowledgeBase/Notes/02.Literature Analysis/: 2. Literature review.md  Comparative Analysis.md  Core Concepts.md  Gap Identification.md  (+3 more)
05_practice/01_latex/: intro.fdb_latexmk  intro.fls  intro.tex
05_practice/03_C++/SFML-Tut1/: CMakeLists.txt
05_practice/03_C++/SFML-Tut1/Sfml_PhysiX/: CMakeLists.txt  Sfml_PhysiX.cpp  Sfml_PhysiX.h
05_practice/04_RL_python/: README.md  gym_basic_usage.py  gym_cartpole.py  qlearning_1.py  qlearning_MountainCar.py  qlearning_MountainCar_trained_q.py  run_gym_lunnar.py  train_continue_gym_lunnar.py  train_gym_lunnar.py  trained_MountainCar.csv  trained_MountainCar.npy
05_practice/05_sumo/: Driv1.net.xml  driv1.rou.xml  driv1.sumocfg
05_practice/06_carla/: tutorial.py
05_practice/06_carla/.ipynb_checkpoints/: tuto-checkpoint.ipynb
05_practice/07_oc/: casadi_intro.ipynb  dms.py  mpc_mshoot_2o.py  mpc_mshoot_targettracking.py  mpc_v2.jl  my_mpc.py  my_mpc_mshoot.py  simulation_code.py  workshop_part1.ipynb  workshop_part1_mpc.ipynb
06_Deliveries/914_phd/: requirements.txt  run_Carla_agent.ps1
06_Deliveries/914_phd/belk/: app.py  todo.md
(+847 files in other folders)
